--- a/index.html
+++ b/index.html
@@ -27,16 +27,23 @@
         .cover2 {
             border-radius: 20px;
         }
-        .indexcover{
+
+        .indexcover {
             height: 600px;
             background-image: url("images/newcover.jpg");
             background-size: cover;
         }
+
         .centered {
             position: absolute;
             top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
+        }
+
+        .footerlink {
+            text-decoration: none;
+            color: white;
         }
     </style>
 
@@ -45,7 +52,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">Logo</a>
+            <a class="navbar-brand fw-bold" href="#">Bike Rental</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -67,7 +74,7 @@
         <div class="centered text-white">
             <h1 class="display-2 fw-bold">Best Bike rental!</h1>
         </div>
-        
+
     </div>
     <div class="container">
         <div class="row text-white text-center" style="margin-top: -8rem;">
@@ -91,7 +98,7 @@
             </div>
         </div>
         <div class="row p-4">
-            <p class="text-center">some text</p>
+            <p class="lead text-center">Discover new places and create lasting memories with our bike rentals</p>
         </div>
         <div class="row px-md-4 py-5">
             <div class="col-md">
@@ -126,7 +133,7 @@
     <div class="container-fluid" style="background-color: #3151AA;">
         <div class="row mx-md-5">
             <div class="col-md-8 p-md-5 p-4 my-5 text-white">
-                <h1 class="display-5">Book a car rental near you by giving us a call!</h1>
+                <h1 class="display-5">Book bike near you by giving us a call!</h1>
             </div>
             <div class="col-md p-5 my-5 text-white">
                 <h3 class="mobile">+12-345-678-89089</h3>
@@ -135,9 +142,9 @@
     </div>
     <div class="container">
         <div class="row text-center m-md-5 p-4">
-            <h1> Best car & van rentals from top suppliers</h1>
+            <h1> Best bike rentals from top suppliers</h1>
             <p class="lead">
-                Our suppliers provide both automatic and manual transmission vehicles in the US, however, availability
+                Our suppliers provide both automatic and manual transmission bikes in the US, however, availability
                 may vary depending on the supplier and the location where you are renting the vehicle.
             </p>
         </div>
@@ -146,11 +153,12 @@
                 <img src="images/bike.png" alt="" height="200px">
             </div>
             <div class="col-md">
-                <h2>Convertible</h2>
-                <p>Quite popular with budget travelers visiting the US(usually for short term travel plans), economy
-                    cars fall in the category of low-cost rental solutions. Not only inexpensive these rental vehicles
-                    are also fuel-efficient.</p>
-                <button class="btn btn-primary">Book now</button>
+                <h2>Dominar 400</h2>
+                <p>Dominar 400 is a touring beast. Get spoilt with a choice of accessories curated especially for a
+                    comfortable touring experience. Tall visor, hand guard, engine bash plate, USB charging port, leg
+                    guard, carrier + back stopper, navigation stay, and saddle stay* - need we say more? </p>
+                <a href="about.html"><button class="btn btn-primary">Book now</button></a>
+
             </div>
         </div>
         <hr>
@@ -159,11 +167,12 @@
                 <img src="images/bike2.png" alt="" height="250px">
             </div>
             <div class="col-md">
-                <h2>Convertible</h2>
-                <p>Quite popular with budget travelers visiting the US(usually for short term travel plans), economy
-                    cars fall in the category of low-cost rental solutions. Not only inexpensive these rental vehicles
-                    are also fuel-efficient.</p>
-                <button class="btn btn-primary">Book now</button>
+                <h2>KTM 200 Duke 2022</h2>
+                <p>Thanks to an ultra-compact single-cylinder 4-stroke power plant and a lightweight tubular chassis,
+                    the KTM 200 DUKE packs a mighty punch. An updated predatory design proudly displays its
+                    BEAST-inspired DNA and shouts DUKE. Make no mistake - the KTM 200 DUKE is an out-and-out street
+                    prowling brawler. </p>
+                <a href="about.html"><button class="btn btn-primary">Book now</button></a>
             </div>
         </div>
         <hr>
@@ -172,11 +181,13 @@
                 <img src="images/bike3.png" alt="" height="200px">
             </div>
             <div class="col-md">
-                <h2>Convertible</h2>
-                <p>Quite popular with budget travelers visiting the US(usually for short term travel plans), economy
-                    cars fall in the category of low-cost rental solutions. Not only inexpensive these rental vehicles
-                    are also fuel-efficient.</p>
-                <button class="btn btn-primary">Book now</button>
+                <h2>KTM 1190 RC8</h2>
+                <p>The macho looking KTM RC8 1190 of the company which is to soon visit the Indian market is just
+                    outstanding and class apart. Being the captivating bike inculcated with latest and enhanced features
+                    is sure to prove itself the best of its kind. The company with this launch expects inflated sales
+                    attracting huge number of bike enthusiasts. The aerodynamic body graphics of the sporty model is
+                    sure to enhance its speed and the sound braking system ensures greater control with the bike..</p>
+                <a href="about.html"><button class="btn btn-primary">Book now</button></a>
             </div>
         </div>
 
@@ -187,15 +198,16 @@
                 <img src="images/cover2.jpg" alt="" width="100%" class="cover2">
             </div>
             <div class="col-md m-2">
-                <h1 class="display-4">Rent the perfect car</h1>
-                <p class="fw-bold lead">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    consequat.</p>
-                <p class="lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla
-                    pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                    est
+                <h1 class="display-4">Bike rentals for every level of rider</h1>
+                <p class="fw-bold lead">Ride with us and make your next adventure one to remember</p>
+                <p class="">At Bike rental, we believe that exploring the world on a bike is one of the most
+                    exhilarating and freeing ways to travel. Our wide selection of high-quality bikes, ranging from
+                    mountain bikes to road bikes to hybrids, are perfect for tackling any terrain. Whether you're an
+                    experienced rider looking to hit the trails or a beginner looking to take a leisurely ride through
+                    the city, we have the perfect bike for you. Our team of knowledgeable and friendly staff will help
+                    you find the perfect fit and provide you with all the necessary equipment and safety gear to ensure
+                    a safe and enjoyable ride. So why wait? Come join us and discover the beauty and adventure that
+                    awaits on two wheels with our top-notch bike rentals.
                 </p>
             </div>
         </div>
@@ -207,9 +219,15 @@
                 <div class="row">
                     <div class="col-md">
                         <h2>About us</h2>
-                        <p>Home</p>
-                        <p>Gallery</p>
-                        <p>Contact</p>
+                        <a class="footerlink" href="index.html">
+                            <p>Home</p>
+                        </a>
+                        <a class="footerlink" href="gallery.html">
+                            <p>Gallery</p>
+                        </a>
+                        <a class="footerlink" href="about.html">
+                            <p>Contact</p>
+                        </a>
                     </div>
                     <div class="col-md">
                         <h2>Contact</h2>
