--- a/about.html
+++ b/about.html
@@ -45,6 +45,10 @@
             background-color: #F2F2F2;
             border-radius: 20px;
         }
+        .footerlink{
+            text-decoration: none;
+            color: white;
+        }
     </style>
 
 </head>
@@ -52,7 +56,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Logo</a>
+            <a class="navbar-brand fw-bold" href="index.html">Bike Rental</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -135,9 +139,9 @@
                 <div class="row">
                     <div class="col-md">
                         <h2>About us</h2>
-                        <p>Home</p>
-                        <p>Gallery</p>
-                        <p>Contact</p>
+                        <a class="footerlink" href="index.html"><p>Home</p></a>
+                        <a class="footerlink" href="gallery.html"><p>Gallery</p></a>
+                        <a class="footerlink" href="about.html"><p>Contact</p></a>
                     </div>
                     <div class="col-md">
                         <h2>Contact</h2>
